@@ -6,19 +6,16 @@ import com.fasterxml.jackson.databind.DeserializationFeature;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.sun.jersey.api.client.WebResource;
 import javafx.collections.ObservableMap;
+import org.phoebus.applications.alarm.logging.ui.AlarmLogTableQueryUtil.Keys;
 import org.phoebus.framework.jobs.Job;
 import org.phoebus.framework.jobs.JobManager;
 import org.phoebus.framework.jobs.JobMonitor;
 import org.phoebus.framework.jobs.JobRunnable;
 import org.phoebus.framework.preferences.PreferencesReader;
-import org.phoebus.applications.alarm.logging.ui.AlarmLogTableQueryUtil.Keys;
 
 import javax.ws.rs.core.MediaType;
 import javax.ws.rs.core.MultivaluedHashMap;
 import javax.ws.rs.core.MultivaluedMap;
-import java.time.ZoneId;
-import java.time.format.DateTimeFormatter;
-import java.util.Arrays;
 import java.util.List;
 import java.util.function.BiConsumer;
 import java.util.function.Consumer;
@@ -26,12 +23,13 @@ import java.util.logging.Level;
 import java.util.stream.Collectors;
 
 import static org.phoebus.applications.alarm.logging.ui.AlarmLogTableApp.logger;
+
 /**
  * A Job to search for alarm messages logged by the alarm logging service
+ *
  * @author Kunal Shroff
  */
 public class AlarmLogSearchJob implements JobRunnable {
-    private final Boolean isNodeTable;
     private final ObservableMap<Keys, String> searchParameters;
     private final Consumer<List<AlarmLogTableItem>> alarmMessageHandler;
     private final BiConsumer<String, Exception> errorHandler;
@@ -39,8 +37,6 @@ public class AlarmLogSearchJob implements JobRunnable {
     private final ObjectMapper objectMapper;
     private final WebResource client;
 
-    private DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss.SSS")
-            .withZone(ZoneId.of("UTC"));
     private final PreferencesReader prefs = new PreferencesReader(AlarmLogTableApp.class,
             "/alarm_logging_preferences.properties");
 
@@ -58,7 +54,6 @@ public class AlarmLogSearchJob implements JobRunnable {
                               Consumer<List<AlarmLogTableItem>> alarmMessageHandler, BiConsumer<String, Exception> errorHandler) {
         super();
         this.client = client;
-        this.isNodeTable = isNodeTable;
         this.searchParameters = searchParameters;
         this.alarmMessageHandler = alarmMessageHandler;
         this.errorHandler = errorHandler;
@@ -68,31 +63,30 @@ public class AlarmLogSearchJob implements JobRunnable {
 
     @Override
     public void run(JobMonitor monitor) {
-        monitor.beginTask("searching for alarm log entires : " +
-                searchParameters.entrySet().stream().map(e-> e.getKey() + ":" + e.getValue()).collect(Collectors.joining()));
+        String searchString = "searching for alarm log entries : " +
+                searchParameters.entrySet().stream().map(e -> e.getKey() + ":" + e.getValue()).collect(Collectors.joining(","));
+        logger.log(Level.INFO, "Searching for alarm entries: " + searchString);
+        monitor.beginTask(searchString);
         int size = prefs.getInt("results_max_size");
 
         MultivaluedMap<String, String> map = new MultivaluedHashMap<>();
-        searchParameters.entrySet().forEach(e -> {
-                    map.add(e.getKey().getName(), e.getValue());
-                }
-        );
-        map.putIfAbsent("size", Arrays.asList(String.valueOf(size)));
+        searchParameters.forEach((key, value) -> map.add(key.getName(), value));
+        map.putIfAbsent("size", List.of(String.valueOf(size)));
 
         try {
 
             long start = System.currentTimeMillis();
-            String resultStr =  client.path("/search/alarm")
+            String resultStr = client.path("/search/alarm")
                     .queryParams(map)
                     .accept(MediaType.APPLICATION_JSON).get(String.class);
 
-            logger.log(Level.FINE,"String response = " + (System.currentTimeMillis() - start));
+            logger.log(Level.FINE, "String response = " + (System.currentTimeMillis() - start));
             start = System.currentTimeMillis();
-            List<AlarmLogTableItem> result = objectMapper.readValue(resultStr, new TypeReference<List<AlarmLogTableItem>>() {
+            List<AlarmLogTableItem> result = objectMapper.readValue(resultStr, new TypeReference<>() {
             });
-            logger.log(Level.FINE,"Object mapper response = " + (System.currentTimeMillis() - start));
+            logger.log(Level.FINE, "Object mapper response = " + (System.currentTimeMillis() - start));
             alarmMessageHandler.accept(result);
-        } catch (JsonProcessingException e) {
+        } catch (Exception e) {
             errorHandler.accept("Failed to search for alarm logs ", e);
         }
     }
